--- a/style.css
+++ b/style.css
@@ -48,8 +48,6 @@
 	--lgray:  #a89984;
 }
 embed { width: 100%; height:100%}
-
-
 html {margin: 0; padding: 0; height:100%}
 
 /* Header */
@@ -77,16 +75,18 @@ body {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
+	text-rendering: optimizeLegibility;
 	background-size: cover;
 	padding:0;
 	text-shadow: 1px 1px 0 rgb(0,0,0,1);
 	word-wrap: break-word;
 }
 #body {
+	text-align: justify;
 	margin: auto;
 	min-width: 50em;
 	max-width: 800px;
-	height:100%;
+	min-height:100%;
 	padding: 1em;
 }
 
@@ -99,12 +99,14 @@ footer {
 	background:var(--bg0_h);
 	margin-top: 1em
 }
+.footer:first-child,.footer:last-child {margin: 0 1em 0 1em}
 .footer {
 	padding-top: 0.5em;
-	padding-bottom: 0.3em;
+	padding-bottom: 0.5em;
 }
-div.footer img {height:30px; margin: 0 1em 0 1em}
+div.footer img {height:1.2rem;}
 
+/* Headers */
 h1,h2,h3 {text-shadow: 2px 2px rgb(0,0,0,1);}
 h1 {color:var(--red);text-align:center}
 h2 {color:var(--orange)}
@@ -132,7 +134,6 @@ h3 {color:var(--yellow)}
 	padding: 0 1rem 0.7rem 1rem;
 	margin-left: -1rem;
 }
-
 .navitems ul {display:block}
 .navitems li:hover .sub-menu-1 {
 	position:absolute;
@@ -158,18 +159,15 @@ button {
 	padding: 0 10px 0 10px;
 	border-radius: 50px;
 }
-div#body.overlay-bg {
-	background: rgba(0,0,0,0.8);
-	border: dashed 1px var(--fg)
-}
-
 
 /* "cards" */
 div.card {
+        background: var(--bg1);
 	margin-top: 1em;
 	margin-bottom: 1em;
 	padding: 0 15px 10px 15px;
-	border-left: 3px solid var(--orange);
+	border-left: 2px solid var(--orange);
+	border-bottom: 1px solid var(--orange);
 }
 div.card h2 { margin-top: 0; margin-bottom: 0.2em;}
 
@@ -188,6 +186,22 @@ ul.block li {
 }
 ul.block li a { padding: 5px 15px 5px 15px; }
 
+/* Gallery */
+div.gallery {
+	display:flex;
+	gap: 20px 20px;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+div.gallery img {
+	width: 22%;
+	transition: all 0.3s ease 0s;
+}
+div.gallery img:hover {
+	transform: scale(1.1);
+}
+
 
 /* Toggle dropdown list */
 summary {
@@ -196,18 +210,19 @@ summary {
 	font-weight: bold;
 	padding: 5px 0px 5px 10px;
 }
+
 details summary::marker {
 	content:" ";
-
 }
+
 details[open] summary::marker {
 	content: " ";
 }
 
-
 details {
-	border-left: 3px solid var(--yellow);
-        background: var(--bg1);
+	border-left: 2px solid var(--yellow);
+	border-bottom: 1px solid var(--yellow);
+        background: var(--bg2);
 	margin:1em;
         font-family: 'nsans','nsans-b','nsans-o','nsans-bo';
 }
@@ -244,7 +259,7 @@ ul.ul2 li::before {
         content:" ";
 }
 ul.ul2 li {
-        background: var(--bg1);
+        background: var(--bg2);
         padding: 5px 15px 5px 15px;
 }
 ul.ul2 li a {
@@ -253,4 +268,32 @@ ul.ul2 li a {
 ul.ul2 li a:hover {
 	color: var(--aqua);
 }
-ul.ul2 li:last-child {	padding-bottom:1em;}
+
+.parallax{
+	margin: auto;
+	margin-top:4em;
+	min-width: 50em;
+	max-width: 800px;
+	min-height:100%;
+	padding: 1em;
+
+	/* Center Vertically */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	/* Set a specific height */
+	min-height: 500px;
+
+	/* Create the parallax scrolling effect */
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.transparent-container {
+	background: rgba(0,0,0,0.3);
+	padding: 2em;
+}
