--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ ul.ul1 li a:hover {
 
 ul.ul2 {
 	margin-top:0;
-	padding-inline-start: 0;
+	padding-inline-start: 1em;
         list-style-type: none;
 
 }
