--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* == Nerd Sans Font == */
 @font-face {
 	font-family: nsans;
 	font-style: normal;
@@ -19,36 +20,38 @@
 	src: url(data/nsans-bo.ttf);
 }
 
-:root {
-	--bg0_h:  #1d2021;
-	--bg0:    #282828;
-	--bg1:    #3c3836;
-	--bg2:    #504945;
-	--bg3:    #665c54;
-	--bg4:    #7c6f64;
+/* == EB Garamond Font == */
+@font-face {
+	font-family: ebg-n;
+	font-style: normal;
+	src: url(data/ebg-n.ttf);
+}
+@font-face {
+	font-family: ebg-i;
+	font-style: italic;
+	src: url(data/ebg-i.ttf);
+}
 
-	--bg:     #282828;
-	--fg:     #ebdbb2;
+/* == Iwona == */
+@font-face {
+	font-family: iwona-mn;
+	font-style: italic;
+	src: url(data/iwona-mn.ttf);
+}
+
+
+:root {
+	--bg0_h:  #000000;
+
+	--fg:     #282828;
+	--bg:     #f6f6f6;
 
 	--red:    #cc241d;
 	--green:  #98971a;
-	--yellow: #d79921;
 	--blue:   #458588;
-	--purple: #b16286;
 	--aqua:   #689d6a;
-	--gray:   #928374;
-	--orange: #d65d0e;
 
-	--lred:   #fb4934;
-	--lgreen: #b8bb26;
-	--lyellow:#fabd2f;
-	--lblue:  #83a598;
-	--lpurple:#d3869b;
 	--laqua:  #8ec07c;
-	--lgray:  #a89984;
-
-	--neon1:  #fabd2f;
-	--neon2:  #d79921;
 }
 embed { width: 100%; height:100%}
 html {margin: 0; padding: 0; height:100%}
@@ -72,26 +75,26 @@ body {
 	background-color: var(--bg);
 	font-size: 1.1rem;
 	line-height: 1.5;
-	font-family: sans-serif,Helvetica;
+	font-family: ebg-n,eng-i;
+	font-weight:500;
 	height:100%;
 	margin:0;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
 	text-rendering: optimizeLegibility;
 	background-size: cover;
 	padding:0;
-	text-shadow: 1px 1px 0 rgb(0,0,0,1);
 	word-wrap: break-word;
 }
 #body {
 	text-align: justify;
+  	text-justify: inter-word;
 	margin: auto;
 	min-width: 50em;
 	max-width: 800px;
 	min-height:100%;
 	padding: 1em;
 }
+strong {font-weight:500;text-shadow: 0px 0px 1px var(--fg)}
+
 
 /* Footer */
 footer {
@@ -110,17 +113,15 @@ footer {
 div.footer img {height:1.2rem;}
 
 /* Headers */
-h1,h2,h3 {
-	text-shadow: 2px 2px rgb(0,0,0,1);
+h1,h2,h3,h4 {
 	line-height: 1em;
 	margin-top:2em;
-	margin-bottom:0.2em;
-	padding-top:0.3em;
-
+	font-family:iwona-mn;
+	font-weight:normal;
 }
-h1 {color:var(--red);text-align:center}
-h2 {color:var(--orange)}
-h3 {color:var(--yellow)}
+h1 {text-align: center;color:var(--red);text-transform: uppercase;font-size:1.6em}
+h2 {text-transform: uppercase;font-size:1.2em}
+h3 {font-size:1.1em}
 h4 {color:var(--blue)}
 
 @media (min-width: 55em) {
@@ -162,13 +163,14 @@ h4 {color:var(--blue)}
 
 /* buttons */
 a, button {
-	color: var(--fg);
-	text-decoration:none;
+	color: var(--bg);
+  	text-decoration: none;
 	font-family: 'nsans','nsans-b','nsans-o','nsans-bo'
 }
 button:hover, a:hover {
-	color: var(--lgreen);
-	transition: all 0.3s ease 0s;
+	color: var(--fg);
+	background: var(--bg);
+	transition: all 0.5s ease 0s;
 	cursor: pointer;
 }
 button {
@@ -178,19 +180,6 @@ button {
 	padding: 0 10px 0 10px;
 	border-radius: 50px;
 }
-
-/* "cards" */
-div.card {
-        background: var(--bg1);
-	margin-top: 1em;
-	margin-bottom: 1em;
-	padding: 0 15px 10px 15px;
-	border-left: 2px solid var(--orange);
-	border-bottom: 1px solid var(--orange);
-}
-div.card h2 { margin-top: 0; margin-bottom: 0.2em;}
-div.card text {	padding-left: 10px; }
-
 
 /* Flexbox with blocks */
 ul.block {
@@ -202,7 +191,7 @@ ul.block {
 	margin:0 1.1em 0 1.1em;
 }
 ul.block li {
-	background: var(--bg1);
+	background: var(--bg);
 }
 ul.block li a { padding: 5px 15px 5px 15px; }
 
@@ -225,9 +214,8 @@ div.gallery img:hover {
 
 /* Toggle dropdown list */
 summary {
-	font-family: 'nsans','nsans-b','nsans-o','nsans-bo';
-	color: var(--yellow);
-	font-weight: bold;
+	font-family: 'iwona-mn','nsans';
+	color: #000;
 	padding: 5px 0px 5px 10px;
 }
 
@@ -240,64 +228,36 @@ details[open] summary::marker {
 }
 
 details {
-	border-left: 2px solid var(--yellow);
-	border-bottom: 1px solid var(--yellow);
-        background: var(--bg2);
 	margin:0.5em;
-        font-family: 'nsans','nsans-b','nsans-o','nsans-bo';
+        font-family: 'iwona-mn','nsans';
+	color: var(--fg);
 }
 
 /* UL used in blog page */
-ul.ul1 {
 
-	list-style-type: none;
-}
-ul.ul1 li::before {
-	font-family: 'nsans','nsans-b','nsans-o','nsans-bo';
-	content:" ";
-}
+
 ul.ul1 li {
-	background: var(--bg2);
-	padding: 5px 15px 5px 15px;
+	font-family:iwona-mn;
+	padding: 5px 15px 5px 0;
 }
 ul.ul1 li a {
-	color: var(--laqua);
-}
-ul.ul1 li a:hover {
-	color: var(--aqua);
-}
+	font-family:iwona-mn;
+	color: #000;
+} ul.ul1 li a:hover {color:var(--bg);background:var(--fg);}
 
 
-ul.ul2 {
-	margin-top:0;
-	padding-inline-start: 1em;
-        list-style-type: none;
-
-}
-ul.ul2 li::before {
-        font-family: 'nsans','nsans-b','nsans-o','nsans-bo';
-        content:" ";
-}
-ul.ul2 li {
-       font-family: consolas;
-       padding: 5px 15px 5px 15px;
-}
-ul.ul2 li a {
-    	padding: 5px 15px 5px 15px;
-        font-family: 'nsans','nsans-b','nsans-o','nsans-bo';
-	color: var(--laqua);
-}
-ul.ul2 li a:hover {
-	color: var(--aqua);
-}
-
-ol.toc {
-}
+ol.toc li::marker {color:green}
 ol.toc li {
-	padding:0.2em;
+	font-family:ebg-n;
+	color: #000;
 }
 ol.toc li a {
-	color:var(--laqua);
+	font-family:iwona-mn;
+	padding:0.2em;
+	color: #000;
+}
+ol.toc li a:hover {
+	color:var(--aqua);
 }
 
 .parallax{
@@ -324,69 +284,20 @@ ol.toc li a {
 	background-size: cover;
 }
 
-div.transparent-container {
-	background: rgba(0,0,0,0.4);
-	padding: 2em;
-}
-div.transparent-container h1, .transparent-container h2 {
-	margin: 0.5em;
-}
-div.transparent-container h1 {
-	font-size: 40px;
-	font-family: "Times New Roman";
-	text-align: center;
-}
-
-.still-glow {
-	color: #f6f6f6;
-	text-shadow:
-	    0 0 0.25em var(--fg),
-	    0 0 0.375em var(--fg),
-	    0 0 0.5em var(--fg),
-	    0 0 0.75em var(--neon2);
-}
-.glow {
-	-webkit-animation: glow 1s ease-in-out infinite alternate;
-	-moz-animation: glow 1s ease-in-out infinite alternate;
-	animation: glow 1s ease-in-out infinite alternate;
-	color: #f6f6f6;
-}
-@-webkit-keyframes glow {
-  from {
-    text-shadow:
-    0 0 0.125em var(--fg),
-    0 0 0.25em var(--fg),
-    0 0 0.35em var(--neon1),
-    0 0 0.5em var(--fg),
-    0 0 0.62em var(--neon1),
-    0 0 0.75em var(--fg),
-    0 0 0.875em var(--fg);
-  }
-  to {
-    text-shadow:
-    0 0 0.25em var(--fg),
-    0 0 0.375em var(--neon2),
-    0 0 0.5em var(--neon2),
-    0 0 0.62em var(--fg),
-    0 0 0.75em var(--neon2),
-    0 0 0.875em var(--fg),
-    0 0 1em var(--fg);
-  }
-}
-
 code {
-	background: var(--bg1) ;
-	color: var(--lgreen) ;
+	font-family:iwona-mn;
+	font-size: 0.9em;
+	color: #000 ;
 	padding: 0 0.2em 0 0.2em ;
 	overflow-wrap: break-word ;
 }
 p a, blockquote a, ul.p li a {
-	font-family: sans-serif,Helvetica;
-	color: var(--lblue) ;
-	padding: 0 0.2em 0 0.2em ;
+	font-family: iwona-mn;
+	font-size:0.95em;
+	color: var(--blue) ;
 	overflow-wrap: break-word ;
 }
-dt { font-weight: bold ; color: lightgray ; padding-top: 0.5em }
+dt { font-weight: bold ;  padding-top: 0.5em }
 figcaption { font-style: italic ; font-size: small ; }
 figure { text-align: center; }
 
@@ -398,3 +309,6 @@ div.center {
 	justify-content: center ;
 	overflow-wrap: break-word ;
 }
+p {
+	margin: 0.5em 0;
+ }
